# billig-sweeper

./: .gitignore  README.md  bsw.c  config.h.in  configure  graphics.xcf  meson.build
data/: AppImageBuilder.yml  billig-sweeper.desktop  billig-sweeper.xcf  config.toml  graphics.xcf  xyz.stuerz.BilligSweeper.desktop  xyz.stuerz.BilligSweeper.metainfo.xml  xyz.stuerz.BilligSweeper.yml
include/: bsw.h  dialog.h  menu.h  tile.h  util.h  video.h
src/: config.c  dialog.c  input.c  main.c  menu.c  tile.c  util.c  video.c
